--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20427,17 +20427,17 @@ div.tagsinput {
       .navbar .navbar-brand-wrapper .navbar-brand:active, .navbar .navbar-brand-wrapper .navbar-brand:focus, .navbar .navbar-brand-wrapper .navbar-brand:hover {
         color: #252b3e; }
       .navbar .navbar-brand-wrapper .navbar-brand img {
-        width: calc(244px - 120px);
+        width: max-content;
         max-width: 100%;
-        height: 28px;
+        height: max-content;
         margin: auto;
         vertical-align: middle; }
       .navbar .navbar-brand-wrapper .navbar-brand.brand-logo-mini {
         display: none; }
         .navbar .navbar-brand-wrapper .navbar-brand.brand-logo-mini img {
-          width: calc(70px - 50px);
+          width: max-content;
           max-width: 100%;
-          height: 28px;
+          height: max-content;
           margin: auto; }
   .navbar .navbar-menu-wrapper {
     transition: width 0.25s ease;
